--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 	},
 	"dependencies": {
 		"express": "^4.12.4",
-		"cors": "^2.8.0"
+		"cors": "^2.8.0",
+    "body-parser": "^1.15.2"
 	},
 	"engines": {
 		"node": "4.4.5"
